# adaptarr-server

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  HACKING.md  README.md  build.rs  config.dev.toml  config.docker.toml  config.toml.dev  config.toml.example  diesel.toml  docker-compose.yml  nginx.dev.conf
api-derive/: Cargo.toml
api-derive/src/: lib.rs
crates/cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/cli/src/: config.rs  document.rs  lib.rs  main.rs  role.rs  server.rs  team.rs  user.rs  util.rs
crates/conversations/: Cargo.toml  README.md
crates/conversations/src/: broker.rs  client.rs  lib.rs  protocol.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: language_tag.rs  lib.rs  locale.rs  template.rs
crates/macros/: Cargo.toml
crates/mail/: Cargo.toml
crates/mail/src/: config.rs  lib.rs  service.rs  transport.rs
crates/models/: CHANGELOG.md  Cargo.toml
crates/models/src/: audit.rs  config.rs  lib.rs  permissions.rs
crates/models/src/db/: functions.rs  mod.rs  models.rs  schema.rs
crates/models/src/events/: events.rs  mod.rs  service.rs
crates/models/src/models/: book.rs  bookpart.rs  document.rs  draft.rs  event.rs  file.rs  invite.rs  mod.rs  module.rs  password.rs  resource.rs  role.rs  team.rs  team_member.rs  ticket.rs  user.rs  xref_target.rs
crates/models/src/models/conversation/: conversation.rs  event.rs  format.rs  mod.rs
crates/models/src/models/editing/: link.rs  mod.rs  process.rs  slot.rs  step.rs  version.rs
crates/models/src/processing/: import.rs  mod.rs  xref_targets.rs
crates/pages/: CHANGELOG.md  Cargo.toml
crates/pages/src/: lib.rs
crates/rest-api/: CHANGELOG.md  Cargo.toml
crates/rest-api/src/: books.rs  config.rs  conversations.rs  drafts.rs  events.rs  lib.rs  modules.rs  process.rs  resources.rs  roles.rs  support.rs  teams.rs  users.rs
crates/util/: Cargo.toml
crates/util/src/: bytes_ext.rs  futures.rs  lib.rs  secure.rs  single_init.rs
crates/web/: CHANGELOG.md  Cargo.toml
crates/web/src/: etag.rs  extractors.rs  file_ext.rs  guards.rs  lib.rs  multipart.rs  responders.rs  session.rs
doc/: conversation.md
doc/api/: README.md  books.md  drafts.md  events.md  modules.md  processes.md  resources.md  roles.md  support.md  teams.md  users.md
locales/: en.ftl  pl.ftl
macros/: Cargo.toml
macros/src/: extra.rs  lib.rs  test.rs
migrations/2018-12-03-094439_create_users/: up.sql
migrations/2018-12-03-105359_create_sessions/: up.sql
migrations/2018-12-05-083418_create_invites/: down.sql  up.sql
migrations/2018-12-06-085833_create_password_reset_tokens/: down.sql  up.sql
migrations/2018-12-06-125820_create_files/: up.sql
migrations/2018-12-06-145516_create_documents/: up.sql
migrations/2018-12-06-151534_create_modules/: down.sql  up.sql
migrations/2018-12-07-131925_create_books/: up.sql
migrations/2018-12-07-133627_create_book_parts/: down.sql  up.sql
migrations/2018-12-07-152847_create_document_files/: down.sql  up.sql
migrations/2018-12-11-081430_create_drafts/: down.sql  up.sql
migrations/2018-12-11-090654_create_function_duplicate_document/: down.sql  up.sql
migrations/2018-12-11-105014_drop_document_files_with_document/: down.sql  up.sql
migrations/2018-12-11-151101_update_version_when_module_is_updated/: down.sql  up.sql
migrations/2018-12-11-163943_create_events/: up.sql
migrations/2018-12-13-110220_fix_update_module_history_trigger/: down.sql  up.sql
migrations/2018-12-13-155103_rename_name_to_title_for_books_drafts_modules/: down.sql  up.sql
migrations/2018-12-17-132059_fix_unique_constraint_on_book_parts_index/: down.sql  up.sql
migrations/2018-12-17-164155_fix_deletion_from_book_parts_being_impossible/: down.sql  up.sql
migrations/2018-12-18-101131_fix_document_duplication_using_wrong_column_name/: down.sql
migrations/2018-12-24-121537_update_root_book_part_when_book_is_updated/: down.sql  up.sql
migrations/2019-01-24-102859_create_xref_targets/: down.sql  up.sql
migrations/2019-01-29-154054_add_document_language/: down.sql  up.sql
migrations/2019-02-28-122012_create_permissions/: down.sql  up.sql
migrations/2019-03-21-095934_create_roles/: down.sql  up.sql
migrations/2019-03-25-090147_user_add_preferred_language/: down.sql  up.sql
migrations/2019-04-11-134645_create_editing_process/: down.sql  up.sql
migrations/2019-04-18-155118_implement_editing_process/: down.sql  up.sql
migrations/2019-05-22-134344_add_missing_field_language_to_document_duplication/: down.sql  up.sql
migrations/2019-06-18-111612_create_conversations/: down.sql  up.sql
migrations/2019-07-09-092002_loosen_restrictions_on_editing_process_links/: down.sql  up.sql
migrations/2019-07-10-094348_create_audit_log/: up.sql
migrations/2019-07-11-153118_add_role_to_invites/: down.sql  up.sql
migrations/2019-07-15-115916_create_resources/: up.sql
migrations/2019-07-16-120748_add_multiple_roles_to_slots/: down.sql  up.sql
migrations/2019-09-04-160853_add_timezone_to_timestamps/: down.sql  up.sql
migrations/2019-09-05-080447_create_teams/: down.sql  up.sql
migrations/2019-09-26-091148_create_conversations/: up.sql
migrations/2019-10-03-132551_remove_system_permissions/: down.sql  up.sql
migrations/2019-10-15-155611_create_support/: down.sql  up.sql
src/: audit.rs  config.rs  i18n.rs  import.rs  lib.rs  macros.rs  mail.rs  main.rs  multipart.rs  permissions.rs  templates.rs  utils.rs
src/api/: bookparts.rs  books.rs  conversations.rs  dashboard.rs  drafts.rs  error.rs  events.rs  mod.rs  modules.rs  pages.rs  process.rs  resources.rs  roles.rs  session.rs  users.rs  util.rs
src/cli/: document.rs  mod.rs  role.rs  server.rs  user.rs  util.rs
src/db/: functions.rs  mod.rs  models.rs  schema.patch  schema.rs  types.rs
src/events/: events.rs  mod.rs  service.rs
src/mail/: config.rs  mod.rs  service.rs  transport.rs
src/models/: book.rs  bookpart.rs  document.rs  draft.rs  (+10 more)
templates/: _base.html  login.html  logout.html  register.html
tests/: content.rs  process.rs  sessions.rs  users.rs
(+47 files in other folders)
