[workspace]
members = [
    "crates/cli",
    "crates/conversations",
    "crates/error",
    "crates/i18n",
    "crates/macros",
    "crates/mail",
    "crates/models",
    "crates/pages",
    "crates/rest-api",
    "crates/util",
    "crates/web",
]

[patch.crates-io]
fluent-bundle = { git = "https://github.com/openstax-poland/fluent-rs.git" }
fluent-syntax = { git = "https://github.com/openstax-poland/fluent-rs.git" }
