[package]
name = "adaptarr-conversations"
version = "0.1.0"
authors = ["Krzysztof Mędrzycki <aiwenari@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web-actors = "1.0.2"
adaptarr-macros = { path = "../macros" }
adaptarr-models = { path = "../models" }
adaptarr-util = { path = "../util" }
bitflags = "1.1.0"
bytes = "0.4.12"
chrono = "0.4.7"
diesel = "1.4.2"
failure = "0.1.5"
log = "0.4.8"
r2d2 = "0.8.5"
