[package]
name = "adaptarr-models"
version = "0.2.0"
authors = ["Krzysztof Mędrzycki <aiwenari@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
adaptarr-error = { path = "../error" }
adaptarr-i18n = { path = "../i18n" }
adaptarr-macros = { path = "../macros" }
adaptarr-mail = { path = "../mail" }
adaptarr-util = { path = "../util" }
base64 = "0.10.1"
bitflags = "1.1.0"
blake2 = { version = "0.2.18", package = "blake2-rfc" }
diesel_migrations = "1.4.0"
failure = "0.1.5"
futures = "0.1.28"
itertools = "0.8.0"
log = "0.4.8"
magic = "0.12.2"
minidom = "0.11.0"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
rand = "0.7.0"
rmps = { version = "0.13.7", package = "rmp-serde" }
rust-argon2 = "0.5.1"
tempfile = "3.1.0"
zip = "0.5.3"

[dependencies.chrono]
version = "0.4.8"
features = ["serde"]

[dependencies.diesel]
version = "1.4.2"
features = ["chrono", "postgres", "uuidv07"]

[dependencies.diesel-derive-enum]
version = "0.4.0"
features = ["postgres"]

[dependencies.uuid]
version = "0.7.4"
features = ["serde", "v4"]

[dependencies.serde]
version = "1.0.99"
features = ["derive"]
